namespace OOPTraining.Encapsulation.Models.Bad;

public class BadCustomer
{
    public string name;
    public string email;

    public BadCustomer(string name, string email)
    {
        this.name = name;
        this.email = email;
    }
}